Fixed Article Strip Alignment issue in big monitors

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -22,6 +22,7 @@
       flex-direction: column;
       gap: 30px;
       margin-bottom: 100px;
+      height: 100%;
 
 
       .title {
@@ -74,6 +75,7 @@
       color: white;
       gap: 50px;
       padding: 20px 0px;
+      bottom: 0;
 
       @include mobile {
         flex-direction: column;
@@ -83,6 +85,7 @@
         content: "";
         position: absolute;
         top: 0;
+        bottom: 0;
         left: -9999px;
         right: -9999px;
         height: 100%;
