--- a/src/components/homeImage/HomeImage.module.scss
+++ b/src/components/homeImage/HomeImage.module.scss
@@ -3,7 +3,7 @@
 
 .rohanImage {
   width: 100%;
-  height: 650px;
+  height: 750px;
   margin-left: 50px;
   object-fit: contain;
 
